# o3dcon_scriptcanvas_session_gem

./: gem.json  project.json
Assets/: Background.fbx  Background_DefaultMaterial.material  Target.fbx  Target.fbx.assetinfo  Target_Material.001.material
Assets/InputBindings/: gameinput.inputbindings
Assets/Materials/: Grid.material
Code/: CMakeLists.txt  gameplaygem_api_files.cmake  gameplaygem_editor_private_files.cmake  gameplaygem_editor_shared_files.cmake  gameplaygem_editor_tests_files.cmake  gameplaygem_private_files.cmake  gameplaygem_shared_files.cmake  gameplaygem_tests_files.cmake  scriptcanvaso3dcon_api_files.cmake  scriptcanvaso3dcon_editor_private_files.cmake  scriptcanvaso3dcon_editor_shared_files.cmake  scriptcanvaso3dcon_editor_tests_files.cmake  scriptcanvaso3dcon_private_files.cmake  scriptcanvaso3dcon_shared_files.cmake  scriptcanvaso3dcon_tests_files.cmake
Code/Source/ScriptCanvasGameplay/: CMakeLists.txt  README.md  ScriptCanvasGameplay_files.cmake
Code/Source/ScriptCanvasGameplay/Include/: EnemySpawner.h  ScriptCanvasGameplay.h
Code/Source/ScriptCanvasGameplay/Include/GameComponents/: EnemyController.h  PlayerController.h
Code/Source/ScriptCanvasGameplay/Source/: EnemySpawner.cpp  ScriptCanvasGameplay.ScriptCanvasNodeable.xml  ScriptCanvasGameplay.cpp
Code/Source/ScriptCanvasGameplay/Source/GameComponents/: EnemyController.cpp  PlayerController.cpp
Gem/: enabled_gems.cmake
Prefabs/: Enemy.prefab  Player_Cyan.prefab  Player_Green.prefab  Player_Red.prefab  Projectile.prefab
Registry/: assetprocessor_settings.setreg
(+41 files in other folders)
